# helpdesk

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust-ci.yaml
database/public/: comments.sql  tickets.sql  users.sql
src/: lib.rs  main.rs
src/models/: comment.rs  entity.rs  mod.rs  ticket.rs  user.rs
src/repos/: mod.rs  repository.rs  repository_config.rs  statement_wrapper.rs  ticket_repository.rs  user_repository.rs
src/server/: mod.rs
src/utils/: error.rs  logger.rs  mod.rs  static_env.rs
